bookinfo/lab-1/route-bookinfo.yaml
apiVersion: gateway.networking.k8s.io/v1 # Ensure you're using the correct API version for your environment
kind: HTTPRoute
metadata:
  name: bookinfo
  namespace: default
spec:
  parentRefs:
  - name: bookinfo-gateway
    sectionName: default
  rules:
  - matches:
    - path:
        type: Exact
        value: "/productpage"
        
    backendRefs:
    - name: productpage
      port: 9080
  - matches:
    - path:
        type: PathPrefix
        value: "/static"
    backendRefs:
    - name: productpage
      port: 9080
  - matches:
    - path:
        type: Exact
        value: "/login"
    backendRefs:
    - name: productpage
      port: 9080
  - matches:
    - path:
        type: Exact    #Big letter!
        value: "/logout"
    backendRefs:
    - name: productpage
      port: 9080
  - matches:
    - path:
        type: PathPrefix
        value: "/api/v1/products"
    backendRefs:
    - name: productpage
      port: 9080
